add img section main

--- a/index.html
+++ b/index.html
@@ -12,13 +12,45 @@
         <h1>
              Meet Our Team
         </h1>
-        <section >
+        <article>
             <p id="top-p">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ipsa delectus excepturi at asperiores qui facilis eum eligendi porro explicabo! Totam consequuntur, quia eum optio dolores facilis maiores cum sapiente!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ipsa delectus excepturi at asperiores qui facilis eum eligendi porro explicabo! Totam consequuntur, quia eum optio dolores facilis maiores cum sapiente! Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis perferendis tempora officia inventore nostrum, pariatur corrupti voluptatum necessitatibus quasi, ab possimus. Ad voluptas ex suscipit, aliquam iste voluptatem labore qui?
             </p>
+        </article>
+    </header>
+    <main class="conteiner">
+        <section class="section-conteiner clearfix">
+            <figure class="picture">
+                <img src="./img/male1.png" alt="Marco" >
+                <figcaption>
+                    Marco Bianchi <br>
+                    designer <br>
+                    marcobianchi@live.com
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./img/female1.png" alt="laura" >
+
+                <figcaption>
+                    Laura Rossi
+                    designer <br>
+                    marcobianchi@live.com
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./img/male2.png" alt="giorgio" >
+
+                <figcaption>  
+                    Giorgio Verdi
+                    designer <br>
+                    marcobianchi@live.com
+                </figcaption>
+            </figure>
 
         </section>
-    </header>
+
+
+    </main>
     
 </body>
 </html>
