--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cards</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -19,34 +23,75 @@
         </article>
     </header>
     <main class="conteiner">
-        <section class="section-conteiner clearfix">
-            <figure class="picture">
-                <img src="./img/male1.png" alt="Marco" >
-                <figcaption>
-                    Marco Bianchi <br>
-                    designer <br>
-                    marcobianchi@live.com
+        <section class="section-conteiner">
+            <figure class="picture fl-left">
+                <img src="./img/male1.png" alt="Marco">
+                <figcaption> 
+                    <p>
+                        Laura Rossi <br>
+                        designer <br>
+                        marcobianchi@live.com 
+                   </p>
                 </figcaption>
             </figure>
-            <figure>
-                <img src="./img/female1.png" alt="laura" >
+            <figure class="picture fl-left">
+                <img src="./img/female1.png" alt="laura">
 
                 <figcaption>
-                    Laura Rossi
-                    designer <br>
-                    marcobianchi@live.com
+                    <p>
+                       Laura Rossi <br>
+                       designer <br>
+                       marcobianchi@live.com 
+                    </p>
+                    
                 </figcaption>
             </figure>
-            <figure>
-                <img src="./img/male2.png" alt="giorgio" >
+            <figure class="picture fl-left">
+                <img src="./img/male2.png" alt="giorgio">
 
-                <figcaption>  
-                    Giorgio Verdi
-                    designer <br>
-                    marcobianchi@live.com
+                <figcaption> 
+                    <p>
+                        Laura Rossi <br>
+                        designer <br>
+                        marcobianchi@live.com 
+                     </p>
                 </figcaption>
             </figure>
+        </section>
+        <section class="section-conteiner">
+            <figure class="picture fl-left">
+                <img src="./img/male1.png" alt="Marco">
+                <figcaption> 
+                    <p>
+                        Laura Rossi <br>
+                        designer <br>
+                        marcobianchi@live.com 
+                   </p>
+                </figcaption>
+            </figure>
+            <figure class="picture fl-left">
+                <img src="./img/female1.png" alt="laura">
 
+                <figcaption>
+                    <p>
+                       Laura Rossi <br>
+                       designer <br>
+                       marcobianchi@live.com 
+                    </p>
+                    
+                </figcaption>
+            </figure>
+            <figure class="picture fl-left">
+                <img src="./img/male2.png" alt="giorgio">
+
+                <figcaption> 
+                    <p>
+                        Laura Rossi <br>
+                        designer <br>
+                        marcobianchi@live.com 
+                     </p>
+                </figcaption>
+            </figure>
         </section>
 
 
