fix img and description

--- a/index.html
+++ b/index.html
@@ -29,51 +29,51 @@
                 <div class="cards">
                     <h2>Marco Bianchi</h2> 
                     <p>designer </p> 
-                    <a href="#">marcobianchi@live.com</a>
+                    <a href="#">marcobianchi@team.com</a>
                 </div>
             </div>
             <div class="col clearfix">
-                <img class="float-left" src="./img/male1.png" alt="Marco">
+                <img class="float-left" src="./img/female1.png" alt="Marco">
                 <div class="cards">
-                    <h2>Marco Bianchi</h2> 
-                    <p>designer </p> 
-                    <a href="#">marcobianchi@live.com</a>
-                </div>
-            </div>
-
-            <div class="col clearfix">
-                <img class="float-left" src="./img/male1.png" alt="Marco">
-                <div class="cards">
-                    <h2>Marco Bianchi</h2> 
-                    <p>designer </p> 
-                    <a href="#">marcobianchi@live.com</a>
+                    <h2>Laura Rossi</h2> 
+                    <p>front-end developer </p> 
+                    <a href="#">laurarossi@team.com</a>
                 </div>
             </div>
 
             <div class="col clearfix">
-                <img class="float-left" src="./img/male1.png" alt="Marco">
+                <img class="float-left" src="./img/male2.png" alt="Marco">
                 <div class="cards">
-                    <h2>Marco Bianchi</h2> 
-                    <p>designer </p> 
-                    <a href="#">marcobianchi@live.com</a>
+                    <h2>Giorgio verdi</h2> 
+                    <p>Back-end developer</p> 
+                    <a href="#">giorgioverdi@team.com</a>
                 </div>
             </div>
 
             <div class="col clearfix">
-                <img class="float-left" src="./img/male1.png" alt="Marco">
+                <img class="float-left" src="./img/female2.png" alt="Marco">
                 <div class="cards">
-                    <h2>Marco Bianchi</h2> 
-                    <p>designer </p> 
-                    <a href="#">marcobianchi@live.com</a>
+                    <h2>marta ipsum</h2> 
+                    <p>SEO specialist</p> 
+                    <a href="#">martaipsum@team.com</a>
                 </div>
             </div>
 
             <div class="col clearfix">
-                <img class="float-left" src="./img/male1.png" alt="Marco">
+                <img class="float-left" src="./img/male3.png" alt="Marco">
                 <div class="cards">
-                    <h2>Marco Bianchi</h2> 
-                    <p>designer </p> 
-                    <a href="#">marcobianchi@live.com</a>
+                    <h2>roberto lorem</h2> 
+                    <p>Project Maneger</p> 
+                    <a href="#">robertolorem@team.com</a>
+                </div>
+            </div>
+
+            <div class="col clearfix">
+                <img class="float-left" src="./img/female3.png" alt="Marco">
+                <div class="cards">
+                    <h2>Daniela amet</h2> 
+                    <p>Analyst</p> 
+                    <a href="#">danielaamet@team.com</a>
                 </div>
             </div>
 
